// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a function 1`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(event) {
  event = JSON.parse(event);
  let msg;
  if (event.name[0] !== event.name[0].toUpperCase()) {
    throw new Error(\\"Name must start with uppercase letter\\");
  }
  if (process.env.PIG_LATIN) {
    msg = \\"Ellohay, \\" + event.name + \\"!\\";
  } else {
    msg = \\"Hello, \\" + event.name + \\"!\\";
  }
  return JSON.stringify({ msg });
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {
            "ENV_VAR1": "true",
          },
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function fails 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{\\\\\\"name\\\\\\":\\\\\\"alice\\\\\\"}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`invoke function fails 2`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(event) {
  event = JSON.parse(event);
  let msg;
  if (event.name[0] !== event.name[0].toUpperCase()) {
    throw new Error(\\"Name must start with uppercase letter\\");
  }
  if (process.env.PIG_LATIN) {
    msg = \\"Ellohay, \\" + event.name + \\"!\\";
  } else {
    msg = \\"Hello, \\" + event.name + \\"!\\";
  }
  return JSON.stringify({ msg });
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function succeeds 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{\\\\\\"name\\\\\\":\\\\\\"Alice\\\\\\"}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`invoke function succeeds 2`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(event) {
  event = JSON.parse(event);
  let msg;
  if (event.name[0] !== event.name[0].toUpperCase()) {
    throw new Error(\\"Name must start with uppercase letter\\");
  }
  if (process.env.PIG_LATIN) {
    msg = \\"Ellohay, \\" + event.name + \\"!\\";
  } else {
    msg = \\"Hello, \\" + event.name + \\"!\\";
  }
  return JSON.stringify({ msg });
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function with environment variables 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{\\\\\\"name\\\\\\":\\\\\\"Alice\\\\\\"}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`invoke function with environment variables 2`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(event) {
  event = JSON.parse(event);
  let msg;
  if (event.name[0] !== event.name[0].toUpperCase()) {
    throw new Error(\\"Name must start with uppercase letter\\");
  }
  if (process.env.PIG_LATIN) {
    msg = \\"Ellohay, \\" + event.name + \\"!\\";
  } else {
    msg = \\"Hello, \\" + event.name + \\"!\\";
  }
  return JSON.stringify({ msg });
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {
            "PIG_LATIN": "true",
          },
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function with process.exit(1) 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`invoke function with process.exit(1) 2`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle() {
  process.exit(1);
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`runtime environment tests 1`] = `
{
  ".wing/func-0_c876d681.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle() {
          
    const query = \\"q=URLUtils.searchParams&topic=api\\";
    const p = new URLSearchParams(query);
    return p.get(\\"topic\\");
  
        }
};
})())({

})).handle(event);
};",
  ".wing/func-1_c8506f0f.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle() {
          
    return fetch;
  
        }
};
})())({

})).handle(event);
};",
  ".wing/func-2_c84e3cf1.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle() {
          
    const c = require(\\"crypto\\");
    return c;
  
        }
};
})())({

})).handle(event);
};",
  ".wing/func-3_c8615d46.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle() {
          
    const { nanoid } = await import(\\"nanoid\\");
    return nanoid();
  
        }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/func-0",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/func-0_c876d681.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/func-1",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/func-1_c8506f0f.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/func-2",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/func-2_c84e3cf1.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/func-3",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/func-3_c8615d46.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "func-0": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "func-0",
          "path": "root/func-0",
        },
        "func-0.handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "func-0.handler",
          "path": "root/func-0.handler",
        },
        "func-1": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "func-1",
          "path": "root/func-1",
        },
        "func-1.handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "func-1.handler",
          "path": "root/func-1.handler",
        },
        "func-2": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "func-2",
          "path": "root/func-2",
        },
        "func-2.handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "func-2.handler",
          "path": "root/func-2.handler",
        },
        "func-3": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "func-3",
          "path": "root/func-3",
        },
        "func-3.handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "func-3.handler",
          "path": "root/func-3.handler",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
